Tela de Reclamação / Avaliação

--- a/infrastructure/pages/index.html
+++ b/infrastructure/pages/index.html
@@ -17,11 +17,11 @@
             <div class="d-flex align-items-center">
                 <img class="logo" src="../assets/images/logo_icon.png" alt="logo do sistema">
                 <h1 class="h2 m-0 me-3">
-                    <a href="../infraestructure/index.html" class="text-light text-decoration-none">InfraCity</a>
+                    <a href="../pages/index.html" class="text-light text-decoration-none">InfraCity</a>
                 </h1>
             </div>
-            <navb class="d-flex align-items-center">
-                <a class="text-light p-3" href="../infraestructure/pages/register/login.html">Olá, faça seu login ou cadastre-se</a>
+            <nav class="d-flex align-items-center">
+                <a class="text-light p-3" href="../pages/cadastro.html">Olá, faça seu login ou cadastre-se</a>
             </nav>
         </div>
         <nav class="navbar navbar-expand-lg bg-secondary text-light">
