--- a/infrastructure/pages/cadastro.html
+++ b/infrastructure/pages/cadastro.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/images/logo_icon.png">
-    <link rel="stylesheet" href="../assets/css/cadastro.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/cadastro.css">
     <!-- Importação do framework Bootstrap para estilização e layout responsivo -->
     <title>Cadastro</title>
 </head>
-<body class="body">
+<body class="bg-secondary">
     <header class="container-fluid text-white py-3">
         <span>
             <img src="../assets/images/logo_icon.png" alt="infracity-icon" class="d-inline-block align-text-center header-icon">
             InfraCity
         </span>
     </header>
-    <main>
-        <h2 class=" h2" >CADASTRO</h2>
-        <form id="form-custom" action="">
-            <div class="row">
+    <main class="bg-light mx-3 mb-3 rounded">
+        <form id="form-custom" action="../pages/home.html" class="my-5">
+              <div class="row">
+                <div class="d-flex justify-content-center">
+                  <h2 class="h2 mb-5 mt-3 fs-1">CADASTRO</h2>
+                </div>
                 <div class="col mb-3">
                     <label for="InputName1" class="form-label">First name</label> <!-- Rótulo para o campo de entrada de nome -->
                     <input type="name" class="border border-warning form-control" id="InputName1" required placeholder="First name" title="This is a required field"> <!-- Campo de entrada para nome, obrigatório -->
@@ -68,6 +70,28 @@
               <button type="reset" class="btn btn-outline-danger">Clear</button>
         </form>
     </main>
+    <!-- Rodapé -->
+    <footer class="bg-dark text-light text-center py-3">
+      <p class="mb-4">&copy; 2024 InfraCity - Todos os direitos reservados.</p>
+      <nav class="d-flex">
+          <div class="container-sm">
+              <ul class="nav justify-content-around">
+                  <li class="nav-item">
+                      <a href="#" class="text-light text-decoration-none">Política de Privacidade</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#" class="text-light text-decoration-none">Termos de Uso</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#" class="text-light text-decoration-none">Suporte</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#" class="text-light text-decoration-none">Contato</a>
+                  </li>
+              </ul>
+          </div>
+      </nav>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Inclusão do script JavaScript do Bootstrap para funcionalidades interativas -->
 </body>
