--- a/infrastructure/pages/index.html
+++ b/infrastructure/pages/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JavaScript Bundle (inclui Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../assets/css/bootstrap.css">
     <link rel="stylesheet" href="../assets/css/global.css">
     <link rel="shortcut icon" href="../assets/images/logo_icon.png" type="image/x-icon">
     <title>Infracity</title>
@@ -21,15 +22,15 @@
                 </h1>
             </div>
             <nav class="d-flex align-items-center">
-                <a class="text-light p-3" href="../pages/cadastro.html">Olá, faça seu login ou cadastre-se</a>
+                <a class="text-light p-3" href="../pages/login/login.html">Olá, faça seu login ou cadastre-se</a>
             </nav>
         </div>
         <nav class="navbar navbar-expand-lg bg-secondary text-light">
             <div class="container-sm">
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <span>☰</span> <!-- Ícone alternativo -->
+                </button>                
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="nav justify-content-center">
