--- a/infrastructure/pages/register/cadastro.html
+++ b/infrastructure/pages/register/cadastro.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/images/logo_icon.png">
+    <link rel="shortcut icon" href="../../assets/images/logo_icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css/cadastro.css">
-    <!-- Importação do framework Bootstrap para estilização e layout responsivo -->
+    <link rel="stylesheet" href="../register/cadastro.css">
     <title>Cadastro</title>
 </head>
 <body class="bg-secondary">
     <header class="container-fluid text-white py-3">
         <span>
-            <img src="../assets/images/logo_icon.png" alt="infracity-icon" class="d-inline-block align-text-center header-icon">
+            <img src="../../assets/images/logo_icon.png" alt="infracity-icon" class="d-inline-block align-text-center header-icon">
             InfraCity
         </span>
     </header>
     <main class="bg-light mx-3 mb-3 rounded">
-        <form id="form-custom" action="../pages/home.html" class="my-5">
+        <form id="form-custom" action="../home/adm/home.html" class="my-5">
               <div class="row">
                 <div class="d-flex justify-content-center">
                   <h2 class="h2 mb-5 mt-3 fs-1">CADASTRO</h2>
@@ -68,6 +67,9 @@
               </div>
               <button type="submit" class="btn btn-outline-success">Submit</button>
               <button type="reset" class="btn btn-outline-danger">Clear</button>
+              <div class="input-box mt-3">
+                <p>Já possui uma conta ? <a href="../login/login.html">Entrar</a></p>
+              </div>
         </form>
     </main>
     <!-- Rodapé -->
