--- a/infrastructure/pages/index.html
+++ b/infrastructure/pages/index.html
@@ -25,11 +25,11 @@
                 <a class="text-light p-3" href="../pages/login/login.html">Olá, faça seu login ou cadastre-se</a>
             </nav>
         </div>
-        <nav class="navbar navbar-expand-lg bg-secondary text-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary text-light">
             <div class="container-sm">
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span>☰</span> <!-- Ícone alternativo -->
+                    <span></span> <!-- ☰ Ícone alternativo -->
                 </button>                
 
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -71,7 +71,7 @@
             <h2 class="text-center mb-4 fw-bold fs-1">Qual é o nosso objetivo?</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
                 <div class="col">
-                    <div class="card bg-body h-100 rounded">
+                    <div class="card bg-body h-100 rounded shadow-lg">
                         <div class="card-body">
                             <h4 class="card-title fw-bold mb-3">Monitoramento em tempo real</h4>
                             <p class="card-text">Acompanhe o status de serviços como iluminação pública, redes de esgoto, pavimentação e muito mais.</p>
